# siglock

./: .gitattributes  .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0-beta.2.md  RELEASE_NOTES_v0.1.0-beta.3.md  RELEASING.md  TESTER_ANNOUNCEMENT_v0.1.0-beta.2.md  TESTER_ANNOUNCEMENT_v0.1.0-beta.3.md  package-lock.json  package.json  tailwind.config.js  test_matcher.mjs
.github/workflows/: release.yml
scripts/: generate-rock-compositions.mjs  validate-updater-manifest.mjs  verify-rock-compositions.mjs  verify-settings-and-preview.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: scanDedupe.ts  settings.ts
src/lib/data/: rock-compositions.json  rockCompositions.ts  signatures.json  signatures.ts
src/routes/: +page.svelte
src/routes/overlay/: +page.svelte
src/routes/region-picker/: +page.svelte
